Bug 564321: Do not escape correct URLs
  only escape URLs when they are not valid

Change-Id: I1af439eed7433ff947e3409d36a9bdd156e38bba